# pytest-demo

./: .pandoc-config.yaml  README.md  build_slides.sh  pyproject.toml  slides.md
src/: model.py
src/tests/: test_model.py
