[project]
name = "pytest-demo"
description = "Demonstrate pytest."
requires-python = ">=3.8"
authors = [
    { name = "Leonard Sasse", email = "l.sasse@fz-juelich.de" },
    { name = "Synchon Mandal", email = "s.mandal@fz-juelich.de" },
]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "src/tests"
log_cli_level = "INFO"
xfail_strict = true
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "-vvv",
]

[tool.coverage.run]
omit = [
    "**/tests/*",

]

[tool.ruff]
line-length = 79
extend-exclude = [
    "__init__.py",
]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # flake8-comprehensions
    "C4",
    # mccabe
    "C90",
    # pydocstyle
    "D",
    # pycodestyle errors
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
    # pygrep-hooks
    "PGH",
    # ruff
    "RUF",
    # flake8-type-checking
    "TCH",
    # pyupgrade
    "UP",
    # pycodestyle warnings
    "W",
    # flake8-2020
    "YTT",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 20
